fix: all validation problem
